fix profile overflow and mobile vectors

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -14,6 +14,7 @@
 .profile__info {
   display: grid;
   grid-template-areas: "title button" "description decription";
+  max-width: 415px;
 }
 
 .profile__title {
@@ -35,11 +36,11 @@
   border: 1px solid #fff;
   align-self: center;
   padding: 0;
+  transition: opacity 0.4s ease;
 }
 
 .profile__edit-button:hover {
   opacity: 0.6;
-  transition: opacity 0.4s ease;
   cursor: pointer;
 }
 
@@ -61,15 +62,19 @@
   margin-left: auto;
   align-self: center;
   padding: 0;
+  transition: opacity 0.3s linear;
 }
 
 .profile__add-button:hover {
   opacity: 0.6;
-  transition: opacity 0.3s linear;
   cursor: pointer;
 }
 
 @media screen and (max-width: 920px) {
+  .profile__info {
+    max-width: 310px;
+  }
+
   .profile__title {
     font-size: 30px;
   }
@@ -91,6 +96,7 @@
   .profile__info {
     display: flex;
     flex-wrap: wrap;
+    max-width: 282px;
     width: 100%;
     padding-top: 26px;
     padding-bottom: 36px;
@@ -98,11 +104,12 @@
   }
 
   .profile__title {
-    font-size: 25px;
+    font-size: 22px;
     text-align: center;
     padding-left: 43px;
     padding-right: 10px;
     padding-bottom: 14px;
+    max-width: 196px;
   }
 
   .profile__description {
@@ -112,16 +119,14 @@
   }
 
   .profile__edit-button {
-    background: transparent url(../images/edit-mobile.svg) center no-repeat;
+    background-size: 7.5px 7.49px;
     height: 18px;
     width: 18px;
-    margin-right: 15px;
-    margin-bottom: 28px;
-    margin-top: 8px;
+    margin-bottom: 14px;
   }
 
   .profile__add-button {
-    background: transparent url(../images/add-mobile.svg) center no-repeat;
+    background-size: 16px 16px;
     width: 300px;
     height: 50px;
     margin: 0;
@@ -130,17 +135,11 @@
 
 @media screen and (max-width: 320px) {
   .profile__title {
-    font-size: 22px;
+    max-width: 210px;
   }
 
   .profile__description {
     font-size: 14px;
-  }
-
-  .profile__edit-button {
-    margin-top: 0;
-    margin-right: 0;
-    margin-bottom: 14px;
   }
 
   .profile__add-button {
